<resources>
    <string name="app_name">cryptocurrencyTrainer</string>
    <string name="oszcz_dno_ci">Oszczędności:</string>
    <string name="zl">&#160;zł</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="ethereum">Ethereum</string>
    <string name="litecoin">Litecoin</string>
    <string name="kup">Kup</string>
    <string name="cena_za_1">Cena za 1:</string>
    <string name="_0">0</string>
    <string name="koszt">Koszt:</string>
    <string name="resetuj_portfel">Resetuj portfel</string>
    <string name="sprzedaj">Sprzedaj</string>
    <string name="oszczednosci">Oszczednosci:</string>
    <string name="ilosc_w_portfelu">Ilosc w portfelu:</string>
    <string-array name="currency">
        <item>Bitcoin</item>
        <item>Ethereum</item>
        <item>Litecoin</item>
    </string-array>
</resources>
