<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="6">

    <TextView
        android:layout_marginTop="35sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/oszcz_dno_ci"
        android:textSize="42sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/zl"
        android:textSize="42sp"/>


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="65sp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/bitcoin"
            android:layout_gravity="center"
            android:layout_weight="1"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bitcoin"
            android:textSize="42sp"
            android:layout_weight="2"
            android:gravity="center"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="42sp"
            android:text="5 zł" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35sp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/eternum"
            android:layout_gravity="center"
            android:layout_weight="1"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ethereum"
            android:textSize="42sp"
            android:layout_weight="2"
            android:gravity="center"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="42sp"
            android:text="5 zł"
            />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35sp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/Litecoin"
            android:layout_gravity="center"
            android:layout_weight="1"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/litecoin"
            android:textSize="42sp"
            android:layout_weight="2"
            android:gravity="center"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="42sp"
            android:text="5 zł"
            />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/kup" />

        <android.support.v7.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sprzedaj"
            android:layout_gravity="center"
            android:gravity="center"/>
    </android.support.v7.widget.LinearLayoutCompat>


</LinearLayout>